--- a/webstatic/styles/5-filters.css
+++ b/webstatic/styles/5-filters.css
@@ -24,3 +24,27 @@ button {
 button:hover {
 	opacity: 0.9;
 }
+
+.filters div {
+	height: 100%;
+	width: 25%;
+	position: relative;
+	display: inline-block;
+}
+
+.filters h3 {
+	font-weight: 600;
+	margin-left: 15%;
+	margin-bottom: 0;
+}
+
+.filters h4 {
+	font-weight: 400;
+	font-size: 14px;
+	margin-left: 15%;
+	margin-top: 0;
+}
+
+.locations {
+	border-right: 1px solid #DDDDDD;
+}
