--- a/webstatic/styles/3-header.css
+++ b/webstatic/styles/3-header.css
@@ -1,8 +1,12 @@
-header{
-	background: white;
-	height: 70px;
-	width: 100%;
+header {
+	background-color: white;
+	background-position: 0 0 0 20px;
+	background-repeat: no-repeat;
 	border-bottom: 1px solid #CCCCCC;
+	box-sizing: border-box;
+	height: 70px;
+	padding-left: 20px;
+	width: 100%;
 }
 
 header .logo {
