--- a/webstatic/styles/6-filters.css
+++ b/webstatic/styles/6-filters.css
@@ -1,50 +1,57 @@
-.container .filters {
-	background: white;
-	height: 70px;
-	width: 100%;
+.filters {
+	align-items: stretch;
+	background-color: white;
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
-	position: relative;
-}
-
-button {
-	background: #FF5A5F;
-	height: 48px;
-	width: 20%;
-	color: #FFFFFF;
-	background: #FF5A5F;
-	font-size: 18px;
-	position: absolute;
-	border-style: none;
-	border-radius: 4px;
-	top: 15%;
-	right: 30px;
-}
-
-button:hover {
-	opacity: 90%;
+	display: flex;
+	height: 70px;
+	width: 100%;
 }
 
 .filters div {
-	height: 100%;
-	width: 25%;
 	position: relative;
-	display: inline-block;
+	width: 25%;
 }
+.filters div:not(:last-of-type) { border-right: 1px solid #DDDDDD }
 
-.filters h3 {
+.filters div h3 {
 	font-weight: 600;
-	margin-left: 15%;
 	margin-bottom: 0;
+	padding: 0 10%;
 }
-
-.filters h4 {
-	font-weight: 400;
+.filters div h4 {
 	font-size: 14px;
-	margin-left: 15%;
-	margin-top: 0;
+	font-weight: 400;
+	margin: 0;
+	padding: 0 10%;
 }
 
-.locations {
-	border-right: 1px solid #DDDDDD;
+.filters ul { list-style-type: none; }
+
+.filters button {
+	background-color: #FF5A5F;
+	border-radius: 4px;
+	color: #FFFFFF;
+	float: right;
+	font-size: 18px;
+	height: 48px;
+	margin: 11px 30px 0 auto;
+	order: 1;
+	width: 20%;
 }
+.filters button:hover {
+	opacity: 0.9;
+}
+
+.popover {
+	background-color: #FAFAFA;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 70px;
+	position: absolute;
+	padding: 10% 0;
+	visibility: hidden;
+	width: 100%;
+}
+.filters div:hover .popover { visibility: visible; }
