--- a/webstatic/styles/6-filters.css
+++ b/webstatic/styles/6-filters.css
@@ -12,7 +12,9 @@
 	position: relative;
 	width: 25%;
 }
-.filters div:not(:last-of-type) { border-right: 1px solid #DDDDDD }
+.filters div:not(:last-of-type) {
+	border-right: 1px solid #DDDDDD
+}
 
 .filters div h3 {
 	font-weight: 600;
@@ -31,6 +33,7 @@
 .filters button {
 	background-color: #FF5A5F;
 	border-radius: 4px;
+	border: 0;
 	color: #FFFFFF;
 	float: right;
 	font-size: 18px;
