--- a/webstatic/styles/8-places.css
+++ b/webstatic/styles/8-places.css
@@ -1,8 +1,9 @@
 .places {
+	align-items: center;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	align-items: center;
+	margin-bottom: 8%;
 	padding: 0 20px;
 }
 
@@ -24,17 +25,70 @@
 	width: 390px;
 
 }
-.places article h2 {
+.places h2 {
 	font-size: 30px;
+	margin-top: 0;
 	text-align: center;
 }
 
-.max_guest {
-	background-image: url('../images/icon_group.png');
+.user {
+	margin-bottom: 1.5%;
 }
 
-.number_rooms { background-image: url('../images/icon_bed.png');
+.price_by_night {
+	align-items: center;
+	align-items: right;
+	border: 4px solid #FF5A5F;
+	border-radius: 50%;
+	color: #FF5A5F;
+	display: flex;
+	font-size: 30px;
+	height: 60px;
+	justify-content: center;
+	min-width: 60px;
+	padding: 2.3%;
 }
 
-.number_bathrooms { background-image: url('../images/icon_bath.png');
+.title_box {
+	display: flex;
+	justify-content: space-between;
+	margin-top: -2%;
+}
+
+.title_box h2 {
+	margin: 25px 0px 40px 30%;
+	text-align: center;
+}
+
+.information {
+	align-items: center;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	display: flex;
+	height: 80px;
+	justify-content: center;
+	margin-bottom: 5%;
+}
+
+.information div {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	height: 65px;
+	justify-content: flex-end;
+}
+
+.information .max_guest {
+	background: url('../images/icon_group.png') no-repeat top center;
+	width: 100px;
+}
+
+.information .number_rooms {
+	background: url('../images/icon_bed.png') no-repeat top center;
+	width: 100px;
+}
+
+.information .number_bathrooms {
+	background: url('../images/icon_bath.png') no-repeat top center;
+	width: 100px;
 }
