--- a/webstatic/styles/100-places.css
+++ b/webstatic/styles/100-places.css
@@ -18,8 +18,6 @@
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
 	display: inline-block;
-	margin-left: auto;
-	margin-right: auto;
 	margin: 20px;
 	padding: 20px;
 	width: 390px;
@@ -68,6 +66,79 @@
 	height: 80px;
 	justify-content: center;
 	margin-bottom: 5%;
+}
+
+.places .amenities_info ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+.places .amenities_info {
+	margin-top: 40px;
+}
+
+.places .amenities_info li {
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: contain;
+	padding-left: 40px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+.amenities_info {
+	margin-top: 40px;
+	margin-left: 0;
+}
+
+.amenities_info h2 {
+	border-bottom: #DDDDDD 1px solid;
+	font-size: 16px;
+	text-align: left;
+	padding-bottom: 5px;
+}
+
+.amenities_info .pets {
+	background: url('../images/icon_pets.png');
+	width: 100px;
+}
+
+.amenities_info .tv {
+	background: url('../images/icon_tv.png');
+	width: 100px;
+}
+
+.amenities_info .wifi {
+	background: url('../images/icon_wifi.png');
+	width: 100px;
+}
+
+.reviews {
+	margin-top: 40px;
+}
+
+.reviews h2 {
+	border-bottom: #DDDDDD 1px solid;
+	font-size: 16px;
+	text-align: left;
+	padding-bottom: 5px;
+}
+
+.reviews h3 {
+	font-size: 14px;
+	text-align: left;
+	padding: 0px;
+}
+
+.reviews p {
+	font-size: 12px;
+	text-align: left;
+	padding-bottom: 20px;
+}
+
+.reviews ul {
+	list-style-type: none;
+	padding: 0;
 }
 
 .information div {
